fix right-panel align

--- a/client/Template/css/BattleStyle.css
+++ b/client/Template/css/BattleStyle.css
@@ -39,6 +39,8 @@
     height: 3.5vh!important;
     padding-top: 0;
     padding-bottom: 0;
+    margin-right: 0;
+    margin-left: 0;
 }
 #bg-move-now{
     height: 20%;
